@@ -10,7 +10,8 @@ libzebra_a_SOURCES = \
 	print_version.c checksum.c vector.c linklist.c vty.c command.c \
 	sockunion.c prefix.c thread.c if.c memory.c buffer.c table.c hash.c \
 	filter.c routemap.c distribute.c stream.c str.c log.c plist.c \
-	zclient.c sockopt.c smux.c md5.c if_rmap.c keychain.c privs.c debug.c
+	zclient.c sockopt.c smux.c md5.c if_rmap.c keychain.c privs.c \
+	debug.c sigevent.c
 
 libzebra_a_DEPENDENCIES = @LIB_REGEX@
 
@@ -21,7 +22,7 @@ pkginclude_HEADERS = \
 	memory.h network.h prefix.h routemap.h distribute.h sockunion.h \
 	str.h stream.h table.h thread.h vector.h version.h vty.h zebra.h \
 	plist.h zclient.h sockopt.h smux.h md5-gnu.h if_rmap.h keychain.h \
-	privs.h debug.h
+	privs.h debug.h sigevent.h
 
 EXTRA_DIST = regex.c regex-gnu.h
 
